@@ -1,9 +1,7 @@
 AUX graylog2.confd 281 RMD160 2eeb1f5e59e085817e66af11990d97a248aa8dcf SHA1 cf8c52dd8b7fedff52647dbf6d22fc53207df62d SHA256 2197bd0ad5fe9fd97e1d7e637e07a3d9037be8e0d6208269209c53868fc15757
 AUX graylog2.initd 1150 RMD160 67fe9e6b766867c4fc0b5af1cb0037e960ad8ae4 SHA1 a4711f9483cfe2455123266a30f44ccdf94de43b SHA256 f23a42435740d0860058984c6f623a41a0e6e1b57a4ca1953c433beaf6c0823d
-DIST graylog2-server-0.9.1.tar.gz 555460 RMD160 c63a4f3e8b09bf4a49f95d6b81e3ad7bc38b2044 SHA1 91fb0ea0f5912d580a3bf243915e94898cac35f5 SHA256 1f63d4ac1513a814a31f6460d1aae9d562695844ee7b5ca463c508f3d601ebfb
-DIST graylog2-server-0.9.2.tar.gz 571375 RMD160 26281497bb9b79b6650a0c073c2e8f2b0ede238a SHA1 c3a5ca3a7bb27c9ecd742101418de75ccbde091c SHA256 a9bbe9712733b930eeb62d1ead2a794feddeaa23905cd00a28f22b9cb8e20b87
+AUX graylog2.initd-r1 1222 RMD160 bf37d0dfefdf828760e04b8022db1a4ecfd4148e SHA1 f66a04af086f67c9a1ff5b4f0c1cc2f24ff87fec SHA256 2f9256aa7f81b3b1d03debdab456ae078d35f31662c09c8f12f92001b428599f
 DIST graylog2-server-0.9.3p1.tar.gz 443549 RMD160 8d9e8c76b9dee9ca327b62e30ceda314bdf813eb SHA1 bb4e433a579d71d6457dee6d1855c624af9e9ba7 SHA256 f7376853b5cb62e7241b9fae63c1fbb4b58a33ba816664ccbeaea2c5fa24f82f
-EBUILD graylog2-0.9.1.ebuild 1101 RMD160 0b108a27d3a5705851d00ea7f22354f035285a8b SHA1 14e109c55d48bf7adc3c8ffeb025f1e70b7949eb SHA256 9c64f24e54571470f99bd9d858b66afde521ac7fad9f8f970e344f022d2287a2
-EBUILD graylog2-0.9.2.ebuild 1101 RMD160 0b108a27d3a5705851d00ea7f22354f035285a8b SHA1 14e109c55d48bf7adc3c8ffeb025f1e70b7949eb SHA256 9c64f24e54571470f99bd9d858b66afde521ac7fad9f8f970e344f022d2287a2
+EBUILD graylog2-0.9.3-r1.ebuild 754 RMD160 66cf158e86293f1333381a84a35d4515662af4be SHA1 db62d189f1342b6ce75ff4fd4a192a488bcc9063 SHA256 29cfbef1efa9e43c87f250dc3e0bb165b03a192ab69161e90beb3fdb7857808d
 EBUILD graylog2-0.9.3.ebuild 1025 RMD160 9a553239215a5283e3b35fe72833bb799439ac2c SHA1 cfe0ee8db8e986fe6c52de883164e87a4ca0ad08 SHA256 eb55e4e1939b607102a52d8f1a511aba92870fdfb8d865fb7422fbf95c080187
-MISC ChangeLog 250 RMD160 8cd63a5bb8143c9849a8a3d14bb6d1692762a784 SHA1 546cee6b1dea70aeeeab5b8ea745b53fb80985ff SHA256 e5b0c32ce5c65d3a0c143362e01b7026dd8152eb70a20e52ee8f9471f4d8821c
+MISC ChangeLog 809 RMD160 7632a4087474c48012edeb50b74a35e96ac577bd SHA1 be7c12b0219fa76bd3913cf93010b11a0cd02a30 SHA256 c2e166aa108b4ec81211ca274a443b36ff0d2c40a5bc6f3404c12924e641fc5d
